--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "next": "^14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
